<resources>
    <string name="app_name">SimpleShopList</string>
    <string name="hintPopup">Eeee</string>
    <string name="enter_text">Enter text</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="next">NEXT</string>
    <string name="edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="add_list">New list</string>
    <string name="Change_theme">Change theme</string>

    <string name="Toothpaste">Toothpaste</string>
    <string name="dishwashing_liquid">Dishwashing liquid</string>
    <string name="garbage_bags">Garbage bags</string>
    <string name="cling_film">Cling film</string>
    <string name="dish_sponges">Dish sponges</string>
    <string name="washing_powder">Washing powder</string>
    <string name="household_goods">Household goods</string>
    <string name="wet_wipes">Wet wipes</string>
    <string name="Shampoo">Shampoo</string>
    <string name="soap">Soap</string>
    <string name="cosmetics">Cosmetics</string>
    <string name="pork">Pork</string>
    <string name="beef">Beef</string>
    <string name="сhicken">Chicken</string>
    <string name="mincemeat">Mincemeat</string>
    <string name="butcher_s">Meat</string>
    <string name="fish">Fish</string>
    <string name="shrimp">Shrimp</string>
    <string name="veggies_fruit">Veggies_fruit</string>
    <string name="apples">Apples</string>
    <string name="bananas">Bananas</string>
    <string name="oranges">Oranges</string>
    <string name="pears">Pears</string>
    <string name="cabbage">Cabbage</string>
    <string name="onion">Onion</string>
    <string name="carrot">Carrot</string>
    <string name="potatoes">Potatoes</string>
    <string name="greens">Greens</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="сucumbers">Cucumbers</string>
    <string name="garlic">Garlic</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="milk">Milk</string>
    <string name="yogurt">Yogurt</string>
    <string name="butter">Butter</string>
    <string name="сream">Cream</string>
    <string name="cheese">Cheese</string>
    <string name="сhicken_eggs">Chicken eggs</string>
    <string name="dairy">Dairy</string>
    <string name="olives">Olives</string>
    <string name="peas">Peas</string>
    <string name="corn">Corn</string>
    <string name="beans">Beans</string>
    <string name="canned_items">Canned items</string>
    <string name="pasta">Pasta</string>
    <string name="buckwheat">Buckwheat</string>
    <string name="rice">Rice</string>
    <string name="sugar">Sugar</string>
    <string name="oatmeal">Oatmeal</string>
    <string name="tea">Tea</string>
    <string name="coffee">Coffee</string>
    <string name="olive_oil">Olive oil</string>
    <string name="cereal_coffee">Cereal coffee</string>
    <string name="bread">Bread</string>
    <string name="cookies">Cookies</string>
    <string name="muffins">Muffins</string>
    <string name="chocolate">Chocolate</string>
    <string name="deli">Deli</string>
    <string name="mayonnaise">Mayonnaise</string>
    <string name="ketchup">Ketchup</string>
    <string name="sauces_spices">Sauces, spices</string>
    <string name="bottled_water">Bottled water</string>
    <string name="juice">Juice</string>
    <string name="water_drinks">Water drinks</string>
    <string name="seafood">Seafood</string>

    <string name="edit_list_name">Edit list name</string>
    <string name="edit_list">Edit list</string>
    <string name="stop_edit_list">Stop edit list</string>
    <string name="share">Share</string>
    <string name="delete_list">Delete list \'\</string>
    <string name="toolbar_delete_list">Delete list</string>
    <string name="to_edit">Edit item</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
        <string name="add">Add item</string>
    <string name="press_here"><![CDATA[<- Press]]></string>
    <string name="delete_department">Delete section \'\</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fill_list_with_default_values">Fill list with default values?</string>
    <string name="add_department">Add section</string>
    <string name="add_new_list">Add list</string>
    <string name="unique_alert">Enter a unique name</string>
    <string name="too_large_name">Name is too long</string>
    <string name="holy_spirit_space">Holy Spirit space</string>
    <string name="hide_department">Hide</string>
    <string name="clean_department">Clean section</string>
    <string name="show_department">Show</string>
    <string name="hide_section">Hide section?</string>
    <string name="import_list">Import list</string>
    <string name="import_list_dialog">Import list?</string>

    <string name="settings">Settings</string>
    <string name="enable_dark_theme">Enable dark theme</string>
    <string name="apps_version">Simple lists for Android v2020.12.03</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="history_of_changes">History of changes</string>
    <string name="about_category">About</string>
    <string name="hide_empty_department">Hide a section if all items crossed off</string>
    <string name="general_settings">General settings</string>
    <string name="too_few_lists">Too few lists</string>
    <string name="Edit_list_name">Edit list name</string>
    <string name="Edit_name">Edit name</string>
    <string name="too_small_name">Please, input some text</string>


</resources>
