<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        app:key="general_category"
        app:title="@string/general_settings"
        android:layout="@layout/preferences_category">

    <SwitchPreference
        app:key="enable_dark_theme"
        app:title="@string/enable_dark_theme"
        />

    <SwitchPreference
        app:key="hide_empty_department"
        app:title="@string/hide_empty_department"
        />
    </PreferenceCategory>

    <!-- todo make backup to file -->

    <PreferenceCategory
        app:key="about_category"
        app:title="@string/about_category"
        android:layout="@layout/preferences_category">

        <Preference
            app:key="history_of_changes"
            app:title="@string/history_of_changes" />

        <Preference
            app:key="privacy_policy"
            app:title="@string/privacy_policy" />

    <Preference
        app:key="version"
        app:summary="@string/apps_version"
        android:selectable="false"/>

    </PreferenceCategory>

</PreferenceScreen>