<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />

    <item
        android:id="@+id/menu_edit_name"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/edit_list_name" />

    <item
        android:id="@+id/menu_import"
        android:icon="@drawable/ic_import_export_black_24dp"
        android:title="@string/import_list" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/toolbar_delete_list" />

</menu>